# ASD_project

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  railway.json
.github/workflows/: backend.yml
docs/: analisis_big_o.md  flowchart.md  flowchart_edit_pesanan.drawio  flowchart_hapus_pesanan.drawio  flowchart_menu_utama.drawio  flowchart_proses_pesanan.drawio  flowchart_queue_operations.drawio  flowchart_stack_operations.drawio  flowchart_tambah_pesanan.drawio  flowchart_tampilkan_data.drawio  pseudocode.md
src/: main.cpp
src/data_structures/: Node.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
src/models/: Pesanan.h
src/ui/: ui.cpp  ui.h
src/utils/: FileManager.cpp  FileManager.h
web/: README.md
web/backend/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
web/backend/data_structures/: Node.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
web/backend/models/: Pesanan.cpp  Pesanan.h
web/frontend/: package-lock.json  vercel.json
web/frontend/app/: globals.css  layout.tsx  page.tsx
web/frontend/app/components/: AddOrderForm.tsx  EditOrderModal.tsx  HistoryList.tsx  NavBar.tsx  QueueList.tsx  ReportView.tsx
web/frontend/app/history/: page.tsx
web/frontend/app/lib/: api.ts  types.ts
web/frontend/app/report/: page.tsx
